---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub type Wibble { Wibble(arg1: Int, arg2: Bool) }\n\npub fn main() {\n  case todo {\n    Wibble(arg2:, ..) -> todo\n  }\n}\n"
---
pub type Wibble { Wibble(arg1: Int, arg2: Bool) }

pub fn main() {
  case todo {
    Wibble(arg2:, ..) -> todo
           ▔▔▔▔↑             
  }
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nBool\n```\n",
    ),
)
